# libgowebrtc

./: .bazelrc  .claude.md  .dockerignore  .gitignore  .golangci.yml  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  PLAN.md  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: bazel.yml  build-libwebrtc.yml  build.yml  ci.yml  release.yml  test.yml
bazel/: BUILD.bazel
bazel/webrtc/: BUILD.bazel  extensions.bzl  repository.bzl
examples/camera_to_browser/: main.go
examples/codec_switch/: index.html  main.go
examples/device_capture/: main.go
examples/encode_decode/: main.go
examples/pion_interop/: main.go
examples/transcode_to_browser/: main.go
internal/ffi/: boundary_test.go  codec_params.go  concurrency_test.go  decoder.go  device.go  device_test.go  dl_helpers_linux_cgo.go  dl_helpers_purego.go  dl_helpers_windows.go  e2e_test.go  encoder.go  ffi_bench_test.go  ffi_test.go  func_bind_cgo.go  func_bind_purego.go  func_vars.go  generate.go  h264_prefer_hw_test.go  integration_test.go  lib.go  lifecycle_test.go  openh264_download.go  openh264_download_test.go  packetizer.go  params_capture.go  params_datachannel.go  params_packetizer.go  params_peerconnection.go  params_rtp.go  params_stats.go  params_track.go  peerconnection.go  peerconnection_test.go  shim_download.go  shim_exports_test.go  shim_manifest.json  shim_platform_test.go  shim_structs.go  struct_alignment_test.go  struct_layout_cgo.go  (+3 more)
internal/ffi/gen_layout/: main.go
internal/testutil/: testutil.go
pkg/codec/: codec.go  codec_test.go  defaults.go
pkg/decoder/: audio_test.go  av1.go  decoder.go  decoder_test.go  e2e_test.go  h264.go  helpers_test.go  opus.go  video_test.go  vp8.go  vp9.go
pkg/depacketizer/: depacketizer.go  depacketizer_test.go
pkg/encoder/: av1.go  e2e_test.go  encoder.go  encoder_test.go  encoder_util.go  h264.go  helpers_test.go  opus.go  opus_test.go  video_test.go  vp8.go  vp9.go
pkg/frame/: audio.go  frame_test.go  video.go
pkg/media/: constraints.go  media.go  media_test.go  pion.go
pkg/packetizer/: packetizer.go  packetizer_test.go
pkg/pc/: e2e_test.go  pc_test.go  peerconnection.go  state_machine_test.go
pkg/track/: e2e_test.go  local.go  scale.go  track_test.go
scripts/: build-libcxx.sh  build.sh  build_libwebrtc.sh  build_libwebrtc_linux.sh  build_linux_shim_docker.sh  build_linux_shims.sh  build_webrtc_simple.sh  release.sh  release_shim.sh  test_autoload_docker.sh  test_clean_env.sh
shim/: BUILD.bazel  BUILD.md  CMakeLists.txt  CMakeLists_stub.txt  build.sh  openh264_codec.cc  openh264_codec.h  openh264_types.h  shim.cc  shim.h  shim_audio_codec.cc  shim_capture.cc  shim_common.cc  shim_common.h  shim_data_channel.cc  shim_internal.h  shim_packetizer.cc  shim_peer_connection.cc  shim_permission.cc  shim_permission_mac.mm  shim_remote_sink.cc  shim_rtp_receiver.cc  shim_rtp_sender.cc  shim_rtp_transceiver.cc  shim_stats.cc  shim_stub.cc  shim_track_source.cc  shim_video_codec.cc
test/benchmark/: comparison_test.go
test/e2e/: capture_test.go  codec_test.go  helpers.go  media_flow_test.go  pion_interop_test.go
test/interop/: audio_roundtrip_test.go  datachannel_test.go  helpers.go  offer_answer_test.go  video_roundtrip_test.go
